# zjunalabxks

./: CMakeLists.txt  cubic_spine.c  eigen.c  free_lunch_bluestein.c  free_lunch_dft.c  free_lunch_jacobi.c  integral.c  my_eigen.c  othogonal_poly.c  poly_root.c  poly_root2.c  readme.md  series.c
